# pdm-cpp

./: CMakeLists.txt  README.md  cmake.py  pyproject.toml
pylib/: __init__.py
