[project]
name = "pylib"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "protobuf>=4.21.1",
    "msgpack>=1.0.3",
]
dynamic = ["version"]

[project.optional-dependencies]

[build-system]
requires = [
    "pdm-pep517 >= 1.0.0",
    "conan>=1.44.0",
]
build-backend = "pdm.pep517.api"

[tool.pdm]
version = { source = "scm" }

[tool.pdm.build]
setup-script = "cmake.py"
run-setuptools = false
is-purelib = true

includes = ["pylib"]
source-includes = ["cpp", "CMakeLists.txt", "conanfile.txt"]

[tool.pdm.dev-dependencies]
dev = [
    "conan>=1.50.0",
    "nox>=2022.1.7",
    "flake8>=4.0.1",
    "pyright>=1.1.261",
]
test = [
    "pytest>=7.1.2",
]